# ros2_autonomous_robot

./: arduino_ros_motor_driver.ino  frames_2026-02-25_23.24.42.gv
maps/: my_map.pgm  my_map.yaml
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: nav2_params.yaml  slam_toolbox.yaml  teleop_joy.yaml  twist_mux.yaml  velocity_smoother.yaml
src/robot_bringup/launch/: bringup.launch.py  nav2.launch.py  rplidar.launch.py  twist_mux.launch.py  velocity_smoother.launch.py
src/robot_control/: package.xml  setup.py
src/robot_control/config/: teleop_joy.yaml
src/robot_control/robot_control/: arduino_bridge.py  cmd_vel_adapter.py
src/robot_description/: package.xml  setup.py
src/robot_description/launch/: display.launch.py
src/robot_description/meshes/: camera.stl  caster_back.stl  caster_front.stl  chassis.stl  lidar.stl  wheel_l.stl  wheel_r.stl
src/robot_description/urdf/: robot.urdf.xacro
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_navigation/: package.xml  setup.py
src/robot_vision/: package.xml  setup.py
